2006-11-21  Alex Taylor  <darwin@techvisual.co.nz>

Reviewed by Mitz.

        Pixel tests for border radius rendering bug
        - http://bugs.webkit.org/show_bug.cgi?id=11587

        * fast/borders/borderRadiusArcs01-expected.checksum: Added.
        * fast/borders/borderRadiusArcs01-expected.png: Added.
        * fast/borders/borderRadiusArcs01-expected.txt: Added.
        * fast/borders/borderRadiusArcs01.html: Added.
2006-11-21  Alex Taylor  <darwin@techvisual.co.nz>

        Reviewed by Mitz.

        Fixes: http://bugs.webkit.org/show_bug.cgi?id=11587

        Adds calculations for bottom right radius's position
        which was being drawn incorrectly.

        * rendering/RenderObject.cpp:
        (WebCore::RenderObject::paintBorder):


Canonical link: https://commits.webkit.org/15027@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@17869 268f45cc-cd09-0410-ab3c-d52691b4dbfc